--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -681,9 +681,9 @@ input[type=search]::-webkit-search-cancel-button {
     height: 600px !important;
 }
 
- .formsdownload {
-    float: right;
- }
+.log-action-button {
+    margin-top: 1.75rem;
+}
 
 #unlinkform {
     float: left;
