--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -230,7 +230,7 @@ h6,
 
 .dtg {
     color: #C8C8C8;
-    font-size: 1rem;
+    font-size: .95rem;
     font-weight: 600;
     margin: auto;
     text-align: center;
