--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -277,8 +277,10 @@ h6,
 }
 
 .rightmiddle {
+    position: relative;
     text-align: right;
-    margin-right: .5rem;
+    margin-top: 3.8rem;
+    z-index: 6000;
 }
 
 #rightbottom {
@@ -310,6 +312,7 @@ h6,
     padding-bottom: .2em;
     padding-right: .4em;
     padding-left: 1em;
+    text-shadow: 1px 1px black;
     text-align: center;
     font-size: 1em;
     font-weight: 500;
@@ -424,6 +427,47 @@ input:checked+.slider:before {
 
 /* SEARCH */
 
+#markform {
+    position: fixed;
+    right: 0;
+    margin-right: 1rem;
+    padding: 1rem;
+    margin-top: -.5rem;
+    background-color: rgba(37, 37, 37, 0.750);
+    border-radius: 6px;
+    z-index: 5000;
+}
+
+mark {
+    background: yellow;
+}
+
+mark.current {
+    background: orange;
+}
+
+.markresults {
+    padding: .1rem;
+    color: black !important;
+    font-style: normal;
+    font-weight: 600;
+    -moz-border-radius: .1rem;
+    -webkit-border-radius: .1rem;
+    border-radius: .1rem;
+}
+
+.marksearch {
+    border: .2rem solid rgb(90, 90, 90);
+    background-color: #8E8B8B;
+    font-size: .85rem;
+}
+
+.search-button {
+    /* margin-top: 1.75rem; */
+    background-color: #8E8B8B;
+    border: .15rem solid rgb(90, 90, 90);
+    font-size: .75rem;
+}
 
 .slide span {
     color: #000000;
@@ -437,7 +481,7 @@ input:checked+.slider:before {
     text-align: left;
     vertical-align: middle;
     height: 2.5em;
-    width: 20vw;
+    width: 18vw;
     max-width: 17em;
     font-size: 1em;
     padding-left: .5rem;
@@ -457,10 +501,10 @@ input[type=search]::-webkit-search-cancel-button {
 
 #count {
     display: inline-block;    
-    width: 18vw;
-    max-width: 14em;
-    margin-right: 6em;
-    text-align: center;
+    /* width: 18vw; */
+    /* max-width: 14em; */
+    margin-right: 10em;
+    text-align: right;
     font-size: 1em;
     font-weight: 600;
 }
@@ -663,7 +707,6 @@ input[type=search]::-webkit-search-cancel-button {
 
 #downloadform {
     float: left;
-    /* margin-right: 2rem; */
 }
 
 .hidden {
@@ -716,7 +759,6 @@ input[type="checkbox"] {
     background: url(../images/decrease.png) no-repeat;
     background-size: 2em;
     content : "";
-    /* content: "show less"; */
     display: inline-block;
     width: 2em;
     height: 2em;
@@ -748,7 +790,6 @@ input[type="checkbox"] {
     width: 2em;
     height: 2em;
 }
-
 
     /* Unlink response modal: */
 
@@ -838,12 +879,12 @@ a:hover {
 }
 
 .notification {
-        width: 100%;
-        text-align: center;
-        color: #555555;
-        font-size: .75rem;
-        Margin-bottom: 2rem;
-        cursor: default;
+    width: 100%;
+    text-align: center;
+    color: #555555;
+    font-size: .75rem;
+    Margin-bottom: 2rem;
+    cursor: default;
 }
 
 /* Progress Bar */
@@ -977,38 +1018,3 @@ a:hover {
     }
 }
 
-
-
-#markform {
-
-    position: fixed;
-    z-index: 5000;
-    margin-left: 15%;
-    /* right: 0; */
-}
-mark {
-    background: yellow;
-}
-
-mark.current {
-    background: orange;
-}
-
-mark.animate {
-    background-position: left bottom;
-    color: #000;
-}
-
-
-.content {
-    margin-top: 50px;
-}
-
-
-.markresults
-
-{
-
-    Color: green;
-
-}
