--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -95,7 +95,6 @@ body::-webkit-scrollbar-thumb {
     transition: .5s;
 }
  
-
 .slidebutton {
     font-size: .75rem;
 }
@@ -258,8 +257,10 @@ h6,
     text-align: center;
     vertical-align: middle;
     width: 20%;
-    cursor: default;
+    filter: drop-shadow(.2rem .2rem .2rem black);
+    -webkit-filter: drop-shadow(.2rem .2rem .2rem black);
     z-index: -1;
+    cursor: default;
 }
 
 #right {
@@ -299,7 +300,6 @@ h6,
     height: 3em;
     /* margin-left: 1vw; */
     margin-right: .5rem;
-    /* border: 1px solid black; */
     border-radius: 6px;
     background-color: #3d3d3d;
     box-shadow: 3px 3px 3px black;
@@ -430,7 +430,7 @@ input:checked+.slider:before {
 #markform {
     position: fixed;
     right: 0;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     padding: 1rem;
     margin-top: -.5rem;
     background-color: rgba(37, 37, 37, 0.750);
@@ -487,6 +487,20 @@ mark.current {
     padding-left: .5rem;
     margin-right: .5rem;
     border-radius: 5px;
+    background-color: rgb(225, 225, 225);
+    border: .2rem solid rgb(90, 90, 90);
+    /* border: .2rem solid transparent; */
+}
+
+.input:hover {
+
+    /* border-color: #007bff; */
+    border: .2rem solid #007bff;
+
+}
+
+.input:focus {
+    border: .2rem solid #007bff;
 }
 
 input[type=search]::-webkit-search-cancel-button {
@@ -496,17 +510,30 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .count {
+    display: none;
+    visibility: hidden;
     text-align: center;
 }
 
 #count {
-    display: inline-block;    
+    /* display: inline-block;     */
     /* width: 18vw; */
     /* max-width: 14em; */
     margin-right: 10em;
-    text-align: right;
-    font-size: 1em;
+    padding: .2rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    font-size: .80rem;
     font-weight: 600;
+    color: black;
+}
+
+.countresults {
+    display: inline-block !important;
+    visibility: visible !important;
+    background-color: rgba(255, 255, 0, 0.75);
+    border-radius: .2rem;
+    cursor: help;
 }
 
 .highlight {
@@ -744,7 +771,6 @@ input[type="checkbox"] {
     -webkit-transition: .5s;
     -moz-transition: .5s;
     transition: .5s;
-    cursor: pointer;
 }
 
 .expandtoggle:hover {
@@ -764,9 +790,9 @@ input[type="checkbox"] {
     height: 2em;
     -webkit-transition: .5s;
     -moz-transition: .5s;
-    transition: .5s; 
+    transition: .5s;
+    cursor: pointer;
 }
-
 
 .expand {
     height: 600px;
@@ -789,53 +815,54 @@ input[type="checkbox"] {
     display: inline-block;
     width: 2em;
     height: 2em;
+    cursor: row-resize;
 }
 
     /* Unlink response modal: */
 
-    #responseModal {
-        display: none;
-        position: fixed;
-        top: 0;
-        width: 50%;
-        margin-top: 15%;
-        margin-left: 25%;
-        margin-right: 25%;
-        padding: 1rem;
-        color: white;
-        text-align: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.900);
-        border: 3px solid #680233;
-        border-radius: 4px;
-        overflow-y: auto;
-        z-index: 8000;
-    }
+#responseModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 50%;
+    margin-top: 15%;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding: 1rem;
+    color: white;
+    text-align: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.900);
+    border: 3px solid #680233;
+    border-radius: 4px;
+    overflow-y: auto;
+    z-index: 8000;
+}
 
-    #modalContent {
-        /* padding-top: .5rem; */
-        padding-bottom: 0;
-        align-items: center;
-        font-size: 1.2rem;
-    }
+#modalContent {
+    /* padding-top: .5rem; */
+    padding-bottom: 0;
+    align-items: center;
+    font-size: 1.2rem;
+}
 
-    .closemodal {
-        position: fixed;
-        color: rgb(255, 80, 80);
-        left: 27%;
-        margin-top: -1rem;
-        /* margin-left: -36%; */
-        font-size: 2rem;
-        font-weight: 700;
-    }
+.closemodal {
+    position: fixed;
+    color: rgb(255, 80, 80);
+    left: 27%;
+    margin-top: -1rem;
+    /* margin-left: -36%; */
+    font-size: 2rem;
+    font-weight: 700;
+}
 
-    .closemodal:hover,
-    .closemodal:focus {
-        color: red;
-        text-decoration: none;
-        cursor: pointer;
-        font-weight: 900;
-    }
+.closemodal:hover,
+.closemodal:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: 900;
+}
 
 
 /* Footer */
