--- a/assets/php/settings/templates/templates-logs_autoRollSize.html
+++ b/assets/php/settings/templates/templates-logs_autoRollSize.html
@@ -1,13 +1,13 @@
 <script type="text/x-handlebars-template">
 
-    <div id="title_input">
+    <div id="autoRollSize_option">
 
         {{#if options.label}}
         <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="title_input_icon" title="Title of service. NOTE: For optimal appearance, ‘Service Title’ should be no more than than 20 characters in length, and no more than 10 consecutive characters without a space."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="autoRollSize_input_icon" title="Auto roll log when filesize is bigger than this value."></i>
 
         </label>
         
