--- a/assets/php/settings/templates/templates-logs_maxLines.html
+++ b/assets/php/settings/templates/templates-logs_maxLines.html
@@ -1,13 +1,13 @@
 <script type="text/x-handlebars-template">
 
-    <div id="maxLine_option">
+    <div id="maxLines_option">
 
         {{#if options.label}}
         <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="maxLine_input_icon" title="Maximum amount of lines to display."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="maxLines_input_icon" title="Maximum amount of lines to display."></i>
 
         </label>
         
