Added authentication Small changes

--- a/assets/php/settings/templates/templates-logs_maxLines.html
+++ b/assets/php/settings/templates/templates-logs_maxLines.html
@@ -1,4 +1,3 @@
-<!--suppress ALL -->
 <script type="text/x-handlebars-template">
 
     <div id="maxLines_option">
@@ -8,7 +7,7 @@
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="maxLines_input_icon" title="Maximum amount of lines to display."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="maxLines_input_icon" title="Maximum amount of lines to display for this log."></i>
 
         </label>
         
