--- a/assets/php/settings/templates/templates-logs_title.html
+++ b/assets/php/settings/templates/templates-logs_title.html
@@ -11,14 +11,7 @@
 
         </label>
         
-        {{/if}} {{#control}}{{/control}} {{#if options.helper}}
-
-        <p class="{{#if options.helperClass}}{{options.helperClass}}{{/if}}">
-            <i class="info-sign"></i>
-            {{{options.helper}}}
-        </p>
-
-        {{/if}}
+        {{/if}} {{#control}}{{/control}}
 
     </div>
 
